--- a/students/marissa-zhong.html
+++ b/students/marissa-zhong.html
@@ -46,8 +46,8 @@
               <h3>Education</h3>
             </div>
             <div class="description-holder">
-              <h4>UCLA</h4>
-              <h5>Teachers College</h5>
+              <h4>Columbia University</h4>
+              <h5>School of Engineering and Applied Science</h5>
             </div>
           </div>
         </div>
