--- a/students/marissa-zhong.html
+++ b/students/marissa-zhong.html
@@ -57,12 +57,12 @@
               <h3>Experience</h3>
             </div>
             <div class="description-holder">
-              <h4>Flatiron School</h4>
-              <h5>Community Manager</h5>
+              <h4>WSP USA</h4>
+              <h5>Structural Engineer</h5>
             </div>
             <div class="description-holder">
-              <h4>Baruch College</h4>
-              <h5>Student Affairs Coordinator</h5>
+              <h4>Gannett Fleming</h4>
+              <h5>Structural Engineer</h5>
             </div>
           </div>
         </div>
